Headers and opengraph

--- a/index.html
+++ b/index.html
@@ -3,10 +3,20 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
-    <meta name="description" content="Data aggregator for DeFi platforms on the Tezos blockchain">
     <meta name="keywords" content="TezosDeFi, Tezos, DeFi, swap, LP, farming, rates, dashboard, XTZ, APR, APY">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tezos DeFi</title>
+    <meta name="title" content="Tezos DeFi">
+    <meta name="description" content="Data aggregator for DeFi platforms on the Tezos blockchain">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://tezosde.fi/">
+    <meta property="og:title" content="Tezos DeFi">
+    <meta property="og:description" content="Data aggregator for DeFi platforms on the Tezos blockchain">
+    <meta property="og:image" content="https://tezosde.fi/cover.jpg">
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://tezosde.fi/">
+    <meta property="twitter:title" content="Tezos DeFi">
+    <meta property="twitter:description" content="Data aggregator for DeFi platforms on the Tezos blockchain">
+    <meta property="twitter:image" content="https://tezosde.fi/cover.jpg">
   </head>
   <body>
     <div id="app"></div>
