--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
     <meta property="og:url" content="https://tezosde.fi/">
     <meta property="og:title" content="Tezos DeFi">
     <meta property="og:description" content="Data aggregator for DeFi platforms on the Tezos blockchain">
-    <meta property="og:image" content="https://tezosde.fi/cover.jpg">
+    <meta property="og:image" content="https://tezosde.fi/cover.png">
     <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:domain" content="tezosde.fi">
     <meta property="twitter:url" content="https://tezosde.fi/">
     <meta property="twitter:title" content="Tezos DeFi">
     <meta property="twitter:description" content="Data aggregator for DeFi platforms on the Tezos blockchain">
-    <meta property="twitter:image" content="https://tezosde.fi/cover.jpg">
+    <meta property="twitter:image" content="https://tezosde.fi/cover.png">
   </head>
   <body>
     <div id="app"></div>
